clock en dobbelsteen

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"D:\\School\\Java fundamentals\\Java-fundementals\\GameOfLife","type":"PROJECT","hints":{"PROJECT_NAME":"GameOfLife"}},"ABSENT"],[{"location":"D:\\Java\\Program","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"D:\\School\\Java fundamentals\\Java-fundementals\\Week2","type":"PROJECT","hints":{"PROJECT_NAME":"Week2"}},"ABSENT"],[{"location":"D:\\Java\\Program","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
